# hackathon2026--Rahul-Bisht-

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  failure_modes.md  pyproject.toml  skills-lock.json
data/: customers.json  knowledge-base.md  orders.json  products.json  tickets.json
scripts/: generate_audit_pdf.py  init_db.py  seed_chroma.py
src/agent/: __init__.py  config.py  main.py
src/agent/audit/: __init__.py  audit_log.py  logger.py  run_report.py
src/agent/data/: loader.py  vector_store.py
src/agent/graph/: __init__.py  builder.py  edges.py  nodes.py  react_agent.py  state.py
src/agent/prompts/: system_prompt.py
src/agent/tools/: __init__.py  failures.py  lc_tools.py  read_tools.py  server.py  write_tools.py
tests/: __init__.py  conftest.py  test_audit.py  test_graph.py  test_run_report.py  test_tools.py
